@@ -1,6 +1,7 @@
 <!doctype html>
 {% load static i18n %}
-<html class="no-js" lang="{{ LANGUAGE_CODE|default:"en-gb" }}">
+{% get_current_language as LANGUAGE_CODE %}
+<html class="no-js" lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="utf-8" />
     <title>Wagtail - {% block titletag %}{% endblock %}</title>
